--- a/practice01/style.css
+++ b/practice01/style.css
@@ -10,9 +10,11 @@ body {
   margin: 0 auto;
 }
 
-.container {
-  width: 91%;
-  max-width: 1240px;
+@media (min-width: 900px) {
+  .container {
+    width: 91%;
+    max-width: 1240px;
+  }
 }
 
 /* リセット / ノーマライズ / サニタイズ */
@@ -57,8 +59,10 @@ a:hover {
   height: 74px;
 }
 
-.header .container {
-  height: 100px;
+@media (min-width: 900px) {
+  .header .container {
+    height: 100px;
+  }
 }
 
 /* ヘッダー：サイト名 */
@@ -83,6 +87,21 @@ a:hover {
   color: #707f89;
   font-size: 10px;
   line-height: 1.4;
+}
+
+@media (min-width: 900px) {
+  .site img {
+    width: 59px;
+    margin-right: 18px;
+  }
+
+  .site .corp {
+    font-size: 20px;
+  }
+
+  .site .desc {
+    font-size: 12px;
+  }
 }
 
 /* ナビゲーションボタン */
@@ -110,4 +129,153 @@ a:hover {
 .nav-button::before {
   transform: translateY(-5px);
   box-shadow: 0 6px currentColor;
+}
+
+.hero {
+  height: 400px;
+  background-image: url(img/hero.jpg);
+  background-position: center;
+  background-size: cover;
+  display: flex;
+}
+
+.hero .catch {
+  flex: auto;
+  align-self: flex-end;
+  padding: 33px 0;
+  background-color: rgba(255, 255, 255, 0.76);
+}
+
+.hero .container {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  line-height: 1.3;
+}
+
+.hero img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: bottom;
+}
+
+.hero p {
+  font-size: 14px;
+  color: #2e5180;
+  margin-bottom: 15px;
+}
+
+@media (min-width: 900px) {
+  .hero {
+    height: 700px;
+  }
+
+  .hero .catch {
+    padding: 47px 0 44px;
+  }
+
+  .hero p {
+    font-size: 16px;
+    margin-bottom: 22px;
+  }
+}
+
+/* メッセージ */
+.message {
+  padding: 67px 0;
+  background-color: #2e5180;
+  color: #ffffff;
+}
+
+.message h2 {
+  font-size: 24px;
+  margin-bottom: 38px;
+  line-height: 1.67;
+  text-align: center;
+}
+
+@media (max-width: 374px) {
+  .message h2 {
+    font-size: 20px;
+  }
+}
+
+.message p {
+  max-width: 640px;
+  margin: auto;
+  font-size: 14px;
+  line-height: 1.86;
+}
+
+@media (min-width: 900px) {
+  .message {
+    padding: 81px 0;
+  }
+  .message h2 {
+    font-size: 36px;
+    line-height: 1.33;
+  }
+}
+
+/* サービス */
+.service {
+  padding: 67px 0;
+  text-align: center;
+}
+
+.service h2 {
+  display: inline-block;
+  margin-bottom: 16px;
+  padding-bottom: 9px;
+  border-bottom: dotted 2px currentColor;
+  font-size: 24px;
+  color: #2e5180;
+}
+
+.service h2 + p {
+  color: #2e5180;
+  font-size: 16px;
+}
+
+@media (min-width: 900px) {
+  .service {
+    padding: 95px 0 87px;
+  }
+
+  .service h2 {
+    font-size: 36px;
+  }
+}
+
+/* サービス：サービスの詳細 */
+.details {
+  margin-top: 53px;
+  color: #333333;
+}
+
+.details img {
+  height: 246px;
+  width: 315px;
+}
+
+.details h3 {
+  font-size: 20px;
+  line-height: 1.75;
+  margin-top: 22px;
+}
+
+.details p {
+  font-size: 12px;
+  line-height: 2;
+  margin-top: 17px;
+  margin: 24px;
+}
+
+.details a {
+  font-size: 16px;
+  color: #2e5180;
+  margin-top: 25px;
+  border: solid 2px #2e5180;
+  border-radius: 50px;
+  padding: 11px 75px 13px 75px;
 }
