--- a/practice01/style.css
+++ b/practice01/style.css
@@ -253,29 +253,99 @@ a:hover {
   color: #333333;
 }
 
-.details img {
-  height: 246px;
-  width: 315px;
+.detail:not(:last-child) {
+  margin-bottom: 67px;
 }
 
 .details h3 {
   font-size: 20px;
   line-height: 1.75;
-  margin-top: 22px;
+  margin-bottom: 17px;
 }
 
 .details p {
   font-size: 12px;
   line-height: 2;
-  margin-top: 17px;
-  margin: 24px;
+  margin: 0 auto 25px;
+  max-width: 264px;
 }
 
-.details a {
+.detail figure {
+  height: 246px;
+  margin-bottom: 22px;
+  background-position: center;
+  background-size: cover;
+}
+
+.detail.office figure {
+  background-image: url(img/office.jpg);
+}
+
+.detail.manage figure {
+  background-image: url(img/manage.jpg);
+}
+
+.detail.research figure {
+  background-image: url(img/research.jpg);
+}
+
+@media (min-width: 900px) {
+  .details {
+    display: flex;
+    margin-top: 75px;
+  }
+
+  .detail {
+    flex: 1;
+    margin-right: 3.22%;
+  }
+
+  .detail:first-child {
+    margin-left: 3.22%;
+  }
+
+  .detail:not(:last-child) {
+    margin-bottom: 0;
+  }
+
+  .detail h3 {
+    font-size: 30px;
+    margin-bottom: 26px;
+    line-height: 1.4;
+  }
+
+  .detail p {
+    width: 78%;
+    max-width: none;
+  }
+
+  .detail figure {
+    height: 360px;
+    margin-bottom: 33px;
+  }
+
+  /* ボタンの位置を揃える */
+  .detail {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .detail .btn {
+    margin-top: auto;
+  }
+}
+
+/* ボタン */
+.btn {
   font-size: 16px;
   color: #2e5180;
-  margin-top: 25px;
-  border: solid 2px #2e5180;
-  border-radius: 50px;
-  padding: 11px 75px 13px 75px;
+  margin: 0 auto;
+  border: solid 2px currentColor;
+  border-radius: 24px;
+  padding: 11px 11px 13px;
+  display: block;
+  width: 208px;
+  box-sizing: border-box;
+  font-weight: bold;
+  text-align: center;
 }
