--- a/practice01/style.css
+++ b/practice01/style.css
@@ -124,12 +124,105 @@ a:hover {
   height: 2px;
   background-color: currentColor;
   transform: translateY(5px);
+  transition: 0.3s ease-in-out;
 }
 
 .nav-button::before {
   transform: translateY(-5px);
   box-shadow: 0 6px currentColor;
 }
+
+/* ナビゲーションボタン（閉じるボタン) */
+.open .nav-button {
+  z-index: 1000;
+  color: #ffffff;
+}
+
+.open .nav-button::before {
+  transform: translateY(1px) rotate(45deg);
+  box-shadow: none;
+}
+
+.open .nav-button::after {
+  transform: translateY(-1px) rotate(-45deg);
+}
+
+/* ナビゲーションボタン: モバイル */
+@media(max-width: 899px) { 
+    html.open, .open body {
+    height: 100%;
+    overflow: hidden;
+  }
+
+  .open .form {
+    display: none;
+  }
+
+  .open nav {
+    left: 0;
+  }
+
+  .header {
+    position: relative;
+  }
+
+  .nav {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: left 0.5s;
+  }
+
+  html, body {
+    overflow-x: hidden;
+  }
+
+  .nav ul {
+    list-style: none;
+    font-weight: bold;
+    text-align: center;
+  }
+
+  .nav li:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .nav .btn {
+    color: inherit;
+  }
+}
+
+/* ナビゲーションメニュー　（PC） */
+@media (min-width: 900px) {
+  .nav-button{
+    display: none;
+  }
+
+  .nav ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    color: #333333;
+  }
+
+  .nav li:not(:last-child) {
+    margin-right: 23px;
+  }
+
+  .nav .btn {
+    width: 148px;
+    border-color: #CDD6DD;
+  }
+}
+
+/* ヒーローイメージ */
 
 .hero {
   height: 400px;
@@ -348,4 +441,185 @@ a:hover {
   box-sizing: border-box;
   font-weight: bold;
   text-align: center;
+}
+
+/* お問い合わせ */
+.contact {
+  padding: 62px 0;
+  background-color: #eef4f8;
+  color: #333333;
+}
+
+.contact h2 {
+  font-size: 24px;
+  margin-bottom: 42px;
+}
+
+.contact h2 + p {
+  font-size: 12px;
+  line-height: 2.17;
+}
+
+@media (min-width: 900px) {
+  .contact {
+    padding: 0;
+    background: none;
+  }
+
+  .contact .container {
+    display: flex;
+    justify-content: space-between;
+    padding: 96px 9% 62px;
+    box-sizing: border-box;
+    background-color: #EEF4F8;
+  }
+
+  .contact .text {
+    flex: 0 0 auto;
+  }
+
+  .contact .form {
+    flex: 1 1 auto;
+    max-width: 457px;
+    margin-left: 1em;
+    margin-top: 0;
+  }
+  .contact h2 {
+    font-size: 36px;
+  }
+
+  .contact h2 + p {
+    font-size: 14px;
+    line-height: 1.86;
+  }
+}
+
+/* お問い合わせ: フォーム */
+.form {
+  margin-top: 46px;
+}
+
+.form input[type="text"],
+.form input[type="email"],
+.form textarea {
+  width: 100%;
+  margin-bottom: 17px;
+  padding: 12px 20px 14px;
+  border: solid 1px #CDD6DD;
+  box-sizing: border-box;
+  border-radius: 0;
+  -webkit-appearance: none;
+  color: #333333;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 16px;
+}
+
+.form ::placeholder{
+  color: #CDD6DD;
+  opacity: 1;
+}
+
+.form textarea {
+  height: 150px;
+}
+
+.form .btn {
+  width: 100%;
+  margin: 0;
+  border: none;
+  background-color: #2E5180;
+  color: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+}
+
+@media (min-width: 900px) {
+  .form .btn {
+    width: 272px;
+  }
+}
+
+/* フッター */
+.footer {
+  padding: 38px 0 56px;
+  background-color: #2E5180;
+}
+
+.footer .site img {
+  width: 47px;
+  margin-right: 14px;
+}
+
+.footer .site .corp {
+  color: #ffffff;
+  font-size: 16px;
+}
+
+.footer .add {
+  margin: 20px 0 36px 61px;
+  color: #ffffff;
+  font-size: 12px;
+  line-height: 2;
+}
+
+.footer .sns {
+  display: flex;
+  margin-left: 61px;
+  list-style: none;
+}
+
+.footer .sns li:not(:first-child) {
+  margin-left: 25px;
+}
+
+.footer .sns img {
+  width: 35px;
+}
+
+@media (min-width: 900px) {
+  .contact {
+    position: relative;
+  }
+
+  .footer {
+    margin-top: -48px;
+    padding: 105px 0 88px;
+  }
+
+  .footer .container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .footer .site img {
+    width: 59px;
+    margin-right: 18px;
+  }
+
+  .footer .site .corp {
+    font-size: 20px;
+  }
+
+  .footer .add {
+    margin: 22px 0 0 77px;
+  }
+
+  .footer .sns {
+    height: 59px;
+    align-items: center;
+  }
+}
+
+/* フェードイン */
+body {
+  animation: fade 5s;
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
